learn about styledComponents

--- a/src/components/CssModules.module.scss
+++ b/src/components/CssModules.module.scss
@@ -19,4 +19,9 @@
   border: none;
   padding: 8px;
   border-radius: 8px;
+  &:hover{
+    background-color: #46cdcf;
+    color: #fff;
+    cursor: pointer; 
+  }
 }
